[package]
name = "rustysignal"
version = "2.0.2"
authors = ["rasviitanen <rasviitanen@gmail.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
description = "A signaling server for WebRTC"
repository = "https://github.com/rasviitanen/rustysignal"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.0"
clap = "2.32.0"
log = "0.4.0"
env_logger = "0.6.0"
ws = { version = "0.8.0", features = ["ssl"] }
openssl = "0.10.16"
web-push = { version = "0.4.1", optional = true }
tokio = "0.1.15"
base64 = "0.10.1"
futures = "0.1.25"

[features]
ssl = ["ws/ssl"]
push = ["web-push"]

